tests/samples/negative/types/enum_case_empty_payload.ax
module enum_case_empty_payload;

enum Bad {
    empty(),
}

fn main() -> i32 {
    return 0;
}
